--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -29,10 +29,10 @@
 </head>
 <body>
 <div style="position: sticky; top: 0; z-index: 1000; padding: 20px; background-color: #FFFFFFDD">
-  <p>In pile: </p><b id="unused_count"></b>&nbsp;&nbsp;&nbsp;&nbsp;<p>Used: </p><b id="used_count"></b>
+  <p>In pile: </p><b id="in_pile_count"></b>&nbsp;&nbsp;&nbsp;&nbsp;<p>Used: </p><b id="used_count"></b>
   <br/><br/>
   <input type="checkbox" id="sort_used">
-  <label for="sort_used">Used on bottom</label>
+  <label for="sort_used">Used on bottom</label>&nbsp;&nbsp;&nbsp;&nbsp;<button id="reset">Reset</button>
   <br/><br/>
   <input type="checkbox" id="base" disabled="disabled" checked="checked">
   <label for="base">Base</label>
