Add The Ferries checkbox.

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -46,6 +46,8 @@
   <label for="flying_machines">Flying Machines</label>
   <input type="checkbox" id="messengers" checked="checked">
   <label for="messengers">Messengers</label>
+  <input type="checkbox" id="ferries" checked="checked">
+  <label for="ferries">Ferries</label>
 </div>
 <div class="grid-container">
 </div>
