Add The Goldmines tiles.
And add the data to The Ferries tiles.

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -48,6 +48,8 @@
   <label for="messengers">Messengers</label>
   <input type="checkbox" id="ferries" checked="checked">
   <label for="ferries">Ferries</label>
+  <input type="checkbox" id="goldmines" checked="checked">
+  <label for="goldmines">Goldmines</label>
 </div>
 <div class="grid-container">
 </div>
