Add Mage & Witch tiles.

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -50,6 +50,8 @@
   <label for="ferries">Ferries</label>
   <input type="checkbox" id="goldmines" checked="checked">
   <label for="goldmines">Goldmines</label>
+  <input type="checkbox" id="mage_and_witch" checked="checked">
+  <label for="mage_and_witch">Mage &amp; Witch</label>
 </div>
 <div class="grid-container">
 </div>
