Use ampersand in expansion names.

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -39,9 +39,9 @@
   <input type="checkbox" id="river" checked="checked">
   <label for="river">River</label>
   <input type="checkbox" id="inns_and_cathedrals" checked="checked">
-  <label for="inns_and_cathedrals">Inns and Cathedrals</label>
+  <label for="inns_and_cathedrals">Inns &amp; Cathedrals</label>
   <input type="checkbox" id="traders_and_builders" checked="checked">
-  <label for="traders_and_builders">Traders and Builders</label>
+  <label for="traders_and_builders">Traders &amp; Builders</label>
   <input type="checkbox" id="flying_machines" checked="checked">
   <label for="flying_machines">Flying Machines</label>
   <input type="checkbox" id="messengers" checked="checked">
