Add The Robbers tiles.

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -52,6 +52,8 @@
   <label for="goldmines">Goldmines</label>
   <input type="checkbox" id="mage_and_witch" checked="checked">
   <label for="mage_and_witch">Mage &amp; Witch</label>
+  <input type="checkbox" id="robbers" checked="checked">
+  <label for="mage_and_witch">Robbers</label>
 </div>
 <div class="grid-container">
 </div>
