--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -53,7 +53,7 @@
   <input type="checkbox" id="mage_and_witch" checked="checked">
   <label for="mage_and_witch">Mage &amp; Witch</label>
   <input type="checkbox" id="robbers" checked="checked">
-  <label for="mage_and_witch">Robbers</label>
+  <label for="robbers">Robbers</label>
 </div>
 <div class="grid-container">
 </div>
