Add The Crop Circles tiles.

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -54,6 +54,8 @@
   <label for="mage_and_witch">Mage &amp; Witch</label>
   <input type="checkbox" id="robbers" checked="checked">
   <label for="robbers">Robbers</label>
+  <input type="checkbox" id="crop_circles" checked="checked">
+  <label for="crop_circles">Crop Circles</label>
 </div>
 <div class="grid-container">
 </div>
