Replace underscores with hyphens.

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -31,10 +31,10 @@
 </head>
 <body>
 <div id="header">
-  <p>In pile: </p><b id="in_pile_count"></b>&nbsp;&nbsp;&nbsp;&nbsp;<p>Used: </p><b id="used_count"></b>
+  <p>In pile: </p><b id="in-pile-count"></b>&nbsp;&nbsp;&nbsp;&nbsp;<p>Used: </p><b id="used-count"></b>
   <br/><br/>
-  <input type="checkbox" id="sort_used">
-  <label for="sort_used">Move used to bottom</label>&nbsp;&nbsp;&nbsp;&nbsp;<button id="reset">Reset</button>
+  <input type="checkbox" id="sort-used">
+  <label for="sort-used">Move used to bottom</label>&nbsp;&nbsp;&nbsp;&nbsp;<button id="reset">Reset</button>
   <br/><br/>
   <div class="expansion">
     <input type="checkbox" id="base" disabled="disabled" checked="checked">
@@ -45,16 +45,16 @@
     <label for="river">River</label>
   </div>
   <div class="expansion">
-    <input type="checkbox" id="inns_and_cathedrals" checked="checked">
-    <label for="inns_and_cathedrals">Inns &amp; Cathedrals</label>
+    <input type="checkbox" id="inns-and-cathedrals" checked="checked">
+    <label for="inns-and-cathedrals">Inns &amp; Cathedrals</label>
   </div>
   <div class="expansion">
-    <input type="checkbox" id="traders_and_builders" checked="checked">
-    <label for="traders_and_builders">Traders &amp; Builders</label>
+    <input type="checkbox" id="traders-and-builders" checked="checked">
+    <label for="traders-and-builders">Traders &amp; Builders</label>
   </div>
   <div class="expansion">
-    <input type="checkbox" id="flying_machines" checked="checked">
-    <label for="flying_machines">Flying Machines</label>
+    <input type="checkbox" id="flying-machines" checked="checked">
+    <label for="flying-machines">Flying Machines</label>
   </div>
   <div class="expansion">
     <input type="checkbox" id="messengers" checked="checked">
@@ -69,16 +69,16 @@
     <label for="goldmines">Goldmines</label>
   </div>
   <div class="expansion">
-    <input type="checkbox" id="mage_and_witch" checked="checked">
-    <label for="mage_and_witch">Mage &amp; Witch</label>
+    <input type="checkbox" id="mage-and-witch" checked="checked">
+    <label for="mage-and-witch">Mage &amp; Witch</label>
   </div>
   <div class="expansion">
     <input type="checkbox" id="robbers" checked="checked">
     <label for="robbers">Robbers</label>
   </div>
   <div class="expansion">
-    <input type="checkbox" id="crop_circles" checked="checked">
-    <label for="crop_circles">Crop Circles</label>
+    <input type="checkbox" id="crop-circles" checked="checked">
+    <label for="crop-circles">Crop Circles</label>
   </div>
 </div>
 <div class="grid-container">
