--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
     <label for="traders-and-builders">Traders &amp; Builders</label>
   </div>
   <div class="expansion">
+    <input type="checkbox" id="princess-and-dragon" checked="checked">
+    <label for="princess-and-dragon">Princess &amp; Dragon</label>
+  </div>
+  <div class="expansion">
     <input type="checkbox" id="flying-machines" checked="checked">
     <label for="flying-machines">Flying Machines</label>
   </div>
