--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
       .grid-container > figure > img {
         width: calc(110 / 142 * 100%);
       }
+
+      .grid-container > figure {
+        text-align: center;
+        margin: 0;
+        font-size: 2.5vw;
+      }
     }
 
     body {
