--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       display: grid;
       grid-template-columns: repeat(auto-fill, 140px);
       background-color: #38AFCD;
-      padding: 20px;
+      padding-top: 20px;
+      padding-right: 28px;
+      padding-bottom: 20px;
+      padding-left: 28px;
       grid-row-gap: 20px;
     }
 
@@ -29,17 +32,23 @@
       }
 
       .grid-container > figure {
-        text-align: center;
-        margin: 0;
         font-size: 2.5vw;
       }
     }
 
     body {
-      margin-top: 0;
+      margin: 0;
     }
 
-    #header { position: sticky; top: 0; z-index: 1000; padding: 20px; background-color: #FFFFFFDD }
+    #header {
+      position: sticky;
+      top: 0; z-index: 1000;
+      padding-top: 20px;
+      padding-right: 28px;
+      padding-bottom: 20px;
+      padding-left: 28px;
+      background-color: #FFFFFFDD
+    }
 
     p { display: inline; }
 
