Fixes and Messengers sorting.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
   <link rel="shortcut icon" href="meeple.png">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <style>
-    .grid-container {
+    :root {
+      color-scheme: light only;
+    }
+
+    #grid-container {
       display: grid;
       grid-template-columns: repeat(auto-fill, 140px);
       background-color: #38AFCD;
+      color: #000000;
       padding-top: 20px;
       padding-right: 28px;
       padding-bottom: 20px;
@@ -17,23 +22,9 @@
       grid-row-gap: 20px;
     }
 
-    .grid-container > figure {
+    #grid-container > figure {
       text-align: center;
       margin: 0;
-    }
-
-    @media screen and (max-width: 632px) {
-      .grid-container {
-        grid-template-columns: repeat(4, 1fr);
-      }
-
-      .grid-container > figure > img {
-        width: calc(110 / 142 * 100%);
-      }
-
-      .grid-container > figure {
-        font-size: 2.5vw;
-      }
     }
 
     body {
@@ -47,12 +38,38 @@
       padding-right: 28px;
       padding-bottom: 20px;
       padding-left: 28px;
-      background-color: #FFFFFFDD
+      background-color: #FFFFFFDD;
+      color: #000000;
     }
 
-    p { display: inline; }
+    p {
+      display: inline;
+    }
 
-    .expansion { display: inline-block; }
+    .expansion {
+      display: inline-block;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      #header {
+        background-color: #000000DD;
+        color: #FFFFFF;
+      }
+    }
+
+    @media screen and (max-width: 632px) {
+      #grid-container {
+        grid-template-columns: repeat(4, 1fr);
+      }
+
+      #grid-container > figure {
+        font-size: 2.5vw;
+      }
+
+      #grid-container > figure > img {
+        width: calc(110 / 142 * 100%);
+      }
+    }
   </style>
 </head>
 <body>
@@ -111,8 +128,7 @@
     <label for="crop-circles">Crop Circles</label>
   </div>
 </div>
-<div class="grid-container">
-</div>
+<div id="grid-container"></div>
 <script src="CarcassonneTileCounter.js"></script>
 </body>
 </html>
